<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordHunt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to WordHunt!</string>
    <string name="button_test_ping_txt">TEST PING!</string>
    <string name="button_login">Login</string>
    <string name="button_grid_training">Training</string>
    <string name="IP_address">IP Address</string>
    <string name="IP_last_used">Last used:</string>
    <string name="IP_localhost">localhost</string>
    <string name="IP_local_192_0">192.168.0.</string>
    <string name="IP_local_192_1">192.168.1.</string>
    <string name="IP_HEIG">10.192.94.</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="next">clear</string>
    <string name="finish">validate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="remember_me">Rester connecté</string>
    <string name="confirmation_password">confirmation du mot de passe</string>
    <string name="register">s\'enregistrer</string>
    <string name="connect">se connecter</string>
    <string name="title_activity_dev">devActivity</string>
    <string name="dev">dev</string>
    <string name="training">Entrainement</string>
    <string name="loadOffline">Charger des parties hors ligne</string>
    <string name="challenge">Challenge</string>
    <string name="tournament">Competition</string>
    <string name="signup">Enregistrement</string>
    <string name="signIn">Connexion</string>
    <string name="signOff">Deconnexion</string>
    <string name="gameFinished">game Finished</string>
    <string name="email_addresse">adresse email</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
