<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/mainMenu"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/ItemLinerLayout"
            android:id="@+id/goToDev"
            android:text="@string/dev"
            android:onClick="gotoDev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/ItemLinerLayout"
            android:id="@+id/buttonTraining"
            android:text="@string/training"
            android:onClick="goToTraining"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/ItemLinerLayout"
            android:id="@+id/buttonOfflineGame"
            android:text="@string/loadOffline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/ItemLinerLayout"
            android:id="@+id/buttonModeChallenge"
            android:text="@string/challenge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/ItemLinerLayout"
            android:id="@+id/buttonModeTournament"
            android:text="@string/tournament"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connection"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="fill_parent">

            <Button
                android:layout_weight="1"
                android:id="@+id/buttonSignUp"
                android:text="@string/signup"
                android:onClick="signUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                android:id="@+id/buttonSignIn"
                android:text="@string/signIn"
                android:onClick="signIn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

</RelativeLayout>