<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.heigvd.wordhuntclient.activities.Login.CreateAccountActivity">

    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            style="@style/ItemLinerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/textEmail"
            android:hint="@string/email_addresse"
            style="@style/ItemLinerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/textPassword"
            style="@style/ItemLinerLayout"
            android:inputType="textPassword"
            android:fontFamily="sans serif"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/textPasswordConfirmation"
            style="@style/ItemLinerLayout"
            android:inputType="textPassword"
            android:fontFamily="sans serif"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmation_password"/>

        <CheckBox
            android:id="@+id/rememberMe"
            style="@style/ItemLinerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>

        <LinearLayout
            style="@style/ItemLinerLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonPerformSignUp"
                android:text="@string/register"
                android:onClick="onSignUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
