<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.heigvd.wordhuntclient.activities.Login.LoginActivity">


    <LinearLayout
        android:id="@+id/layoutSignIn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textUserName"
            style="@style/ItemLinerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/textPassword"
            style="@style/ItemLinerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:inputType="textPassword" />

        <LinearLayout
            style="@style/ItemLinerLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonPerformSignIn"
                android:text="@string/connect"
                android:layout_width="fill_parent"
                android:onClick="onSignIn"
                android:layout_height="wrap_content" />
            </LinearLayout>

    </LinearLayout>

</RelativeLayout>
